fix positioning of garden pieces when in full size mode so their tops aren't hidden by the header

--- a/ocd-zen-garden/src/Garden.css
+++ b/ocd-zen-garden/src/Garden.css
@@ -4,6 +4,11 @@
     top: 45px
 }
 
+.pieceContainer {
+    position: relative;
+    top: 45px
+}
+
 
 @media (min-width: 1000px) {
     .Garden {
